<resources>
    <string name="app_name">TrashCan</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="t_edt_email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="plastik">Plastik</string>
    <string name="kertas">Kertas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="atau">atau</string>
    <string name="google">Google</string>
    <string name="belum_punya">Belum punya</string>
    <string name="akun"> akun?</string>
    <string name="sign_up">Sign Up</string>
    <string name="t_edt_username">Username</string>
    <string name="confirm_password">Confirm Parssword</string>
    <string name="title_history">Riwayat</string>
    <string name="title_profile">Profile</string>
    <string name="judul_tipe_sampah">Plastik - Botol</string>
    <string name="contoh">Contoh</string>
    <string name="rincian">Rincian</string>
    <string name="nama_lain">Nama</string>
    <string name="nama_lain_des">bottle</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="deskripsi_des"> botol yang terbuat dari plastik. Botol plastik biasanya dipakai untuk menyimpan cairan seperti air, minuman ringan, oli motor, minyak masak, obat, sampo, susu dan tinta. Mempunyai dua jenis yaitu yang berwarna dan bening. Ukuran dan bentuknya pun beragam.</string>
    <string name="tips_tukar_sampah">Tips tukar sampah</string>
    <string name="tips_tukar_sampah_des">Botol sudah dalam keadaan kering, dan label telah dilepas</string>
    <string name="sudah_punya">Sudah punya</string>
    <string name="title_information">Informasi</string>
    <string name="tipe_sampah">Tipe Sampah</string>
</resources>
