<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rivan.trashcanv4.nav.FragmentNavHome"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_nav_home" />

    <fragment
        android:id="@+id/navigation_information"
        android:name="com.rivan.trashcanv4.nav.FragmentNavHistory"
        android:label="@string/title_information"
        tools:layout="@layout/fragment_nav_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.rivan.trashcanv4.nav.FragmentNavProfile"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_nav_profile" />
</navigation>